# rinkle

./: CHANGELOG.md  Cargo.toml  Justfile  Makefile.toml  README.md  cliff.toml  rustfmt.toml
.github/workflows/: coverage.yml  integration.yml  release-plz.yml  release.yml
config/: rinkle.toml
docs/: ANALYSIS_AND_NOTES.md  ENHANCE.md  IMPLEMENTATION_PLAN.md  SPECIFICATION.md
examples/.dotfiles/: .vimrc
examples/.dotfiles/nvim/: init.lua
examples/config/: rinkle.toml
src/: app.rs  cli.rs  config.rs  daemon.rs  error.rs  ipc.rs  lib.rs  main.rs  monitor.rs  prelude.rs  repl.rs  rinkle.rs  setup.rs  state.rs  utils.rs
src/config/: entity.rs  loader.rs  mod.rs
src/daemon/: unix.rs  windows.rs
src/linker/: linker_impl.rs  mod.rs
src/utils/: mod.rs
tests/: healthy_test.rs  integration_cli.rs  integration_extended.rs
