[package]
name = "rinkle"
version = "0.1.0"
edition = "2021"
authors = ["Hanjie Zhang <vainjoker@tuta.io>"]
readme = "README.md"
license = "GPL-3.0"
exclude = [".github", "CHANGELOG.md"]
repository = "https://github.com/vainjoker/rinkle"
homepage = "https://github.com/vainjoker/rinkle"
description = "A symlink farm manager which takes distinct sets of software and/or data located in separate directories on the filesystem, and makes them appear to be installed in a single directory tree. "
keywords = ["dotfiles", "symlink", "stow", "cli", "config"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.9.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
fd-lock = "4.0.4"
dirs = "5"
shellexpand = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
serde_json = "1"
nix = { version = "0.30", default-features = false, features = ["signal"] }
notify = "6"
dialoguer = "0.12.0"
colored = "3.0.0"
indicatif = "0.18.0"
atty = "0.2"
anyhow = "1.0.100"
realme = { version = "0.2.3", features = ["toml"] }
directories-next = "2.0.0"
interprocess = "2.2.3"
ctrlc = "3.4"
daemonize = "0.5.0"
signal-hook = "0.3.18"
sysinfo = "0.37.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.10.1"


[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
module_inception = "allow"
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"

[profile.release]
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

